@@ -45,6 +45,8 @@
     <properties>
         <java.version>25</java.version>
         <spring-cloud.version>2025.1.0</spring-cloud.version>
+        <nullaway.version>0.13.1</nullaway.version>
+        <error-prone.version>2.48.0</error-prone.version>
     </properties>
 
     <dependencyManagement>
@@ -96,6 +98,18 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <annotationProcessorPaths>
@@ -103,7 +117,29 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </path>
+                        <path>
+                            <groupId>com.uber.nullaway</groupId>
+                            <artifactId>nullaway</artifactId>
+                            <version>${nullaway.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>${error-prone.version}</version>
+                        </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.compiler,jdk.net</arg>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>--should-stop=ifError=FLOW</arg>
+                        <arg>
+                            -Xplugin:ErrorProne \
+                            -Xep:NullAway:ERROR \
+                            -XepOpt:NullAway:AnnotatedPackages=vn.edu.uit.msshop \
+                            -XepOpt:NullAway:JSpecifyMode=true \
+                        </arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -117,6 +153,10 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <jvmArguments>
+                        --add-modules jdk.net 
+                        -Duser.timezone=UTC
+                    </jvmArguments>
                 </configuration>
             </plugin>
 
@@ -124,7 +164,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Duser.timezone=UTC</argLine>
+                    <argLine>
+                        @{argLine}
+                        --add-modules jdk.net
+                        -Duser.timezone=UTC
+                    </argLine>
                 </configuration>
             </plugin>
 
